# MiniEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
TestGame/: TestGame.cpp
src/Core/: Engine.cpp  Engine.h  EntryPoint.cpp  EntryPoint.h  Game.cpp  Game.h  MiniEngine.h  MiniTime.cpp  MiniTime.h  MiniWindow.h  Time.h
src/Core/Events/: Event.h  EventHandler.cpp  EventHandler.h  KeyEvents.h  MouseEvents.h  WindowEvents.h
src/Core/Log/: Log.cpp  Log.h  MiniLogger.cpp  MiniLogger.h
